# diligent_3d_engine

./: README.md
DiligentSamples/Tutorials/XXX_Functions/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_Functions/assets/: pixel_shader_source.psh  vertex_shader_source.vsh
DiligentSamples/Tutorials/XXX_Functions/src/: XXX_Functions.cpp  XXX_Functions.hpp
DiligentSamples/Tutorials/XXX_GLSL/PYRAMID/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_GLSL/PYRAMID/assets/: PS.glsl  VS.glsl
DiligentSamples/Tutorials/XXX_GLSL/PYRAMID/src/: pyramid.cpp  pyramid.hpp
DiligentSamples/Tutorials/XXX_GLSL/Single_Texturing/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_GLSL/Single_Texturing/assets/: PS.glsl  VS.glsl
DiligentSamples/Tutorials/XXX_GLSL/Single_Texturing/src/: texturingInst.cpp  texturingInst.hpp
DiligentSamples/Tutorials/XXX_GLSL/TEXTURES_X/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_GLSL/TEXTURES_X/assets/: VS.glsl
DiligentSamples/Tutorials/XXX_GLSL/TEXTURES_X/src/: textures.cpp  textures.hpp
DiligentSamples/Tutorials/XXX_GLSL/TEXTURING/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_GLSL/TEXTURING/assets/: PS.glsl  VS.glsl
DiligentSamples/Tutorials/XXX_GLSL/TEXTURING/src/: texturing.cpp  texturing.hpp
DiligentSamples/Tutorials/XXX_GeometryShader/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_GeometryShader/assets/: cube.gsh  cube.psh  cube.vsh  structures.fxh
DiligentSamples/Tutorials/XXX_GeometryShader/src/: XXX_GeometryShader.cpp  XXX_GeometryShader.hpp
DiligentSamples/Tutorials/XXX_HLSL/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/COMPUTE_SHADER/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/COMPUTE_SHADER/assets/: reset_particle_lists.csh  structures.fxh
DiligentSamples/Tutorials/XXX_HLSL/COMPUTE_SHADER/src/: ComputeShader.cpp  ComputeShader.hpp
DiligentSamples/Tutorials/XXX_HLSL/GEOMETRY_SHADER_HLSL/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/GEOMETRY_SHADER_HLSL/assets/: structures.fxh
DiligentSamples/Tutorials/XXX_HLSL/GEOMETRY_SHADER_HLSL/src/: geometry_shader.cpp  geometry_shader.hpp
DiligentSamples/Tutorials/XXX_HLSL/INSTANCING02/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/INSTANCING_HLSL/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/INSTANCING_HLSL/assets/: cube_inst.psh  cube_inst.vsh
DiligentSamples/Tutorials/XXX_HLSL/INSTANCING_HLSL/src/: Instancing_hlsl.cpp  Instancing_hlsl.hpp
DiligentSamples/Tutorials/XXX_HLSL/MeshShader/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShader/assets/: MS.glsl  PS.glsl  PS.psh  VS.vsh  bezierPS.psh  constMS.msh  constPS.psh  data_loadMS.msh  data_loadPS.psh  dillMS.msh  dillPS.psh  lettersMS.msh  lettersPS.psh  meshshader.frag  meshshader.mesh  meshshader.task  pass_throughMS.msh  pass_throughPS.psh  simpleMS.msh  simplePS.psh  structures.fxh  tidMS.msh  tidPS.psh
DiligentSamples/Tutorials/XXX_HLSL/MeshShader/src/: Object.hpp  meshObject.cpp  meshObject.hpp
DiligentSamples/Tutorials/XXX_HLSL/MeshShader001/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShader001/src/: geometry_shader.cpp  meshObject.cpp  meshObject.hpp
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Constants/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Constants/assets/: MS.msh  PS.psh  structures.fxh
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Constants/src/: MeshShaderConstants.cpp  MeshShaderConstants.hpp
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Curves/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Curves/assets/: MS.msh  PS.psh
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Curves/src/: MeshShaderCurves.cpp  MeshShaderCurves.hpp
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Intro/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Intro/assets/: MS.msh  MS001.msh  PS.psh  PS001.psh  buildMS.msh  buildPS.psh
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Intro/src/: MeshShader.cpp  MeshShader.hpp
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_LoadData/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_LoadData/assets/: MS.msh  PS.psh  structures.fxh
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Simple/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_SolidTriangles/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Tut/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_HLSL/MeshShaders_Tut/assets/: AS.ash  (+3 more)
DiligentSamples/Tutorials/XXX_Instancing/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_Instancing/assets/: cube_inst.psh  cube_inst.vsh
DiligentSamples/Tutorials/XXX_Instancing/src/: XXX_Instancing.cpp  XXX_Instancing.hpp
DiligentSamples/Tutorials/XXX_Mesh/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_Mesh/src/: Mesh.cpp  Mesh.hpp
DiligentSamples/Tutorials/XXX_Object/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_Object/src/: XXX_Object.cpp  XXX_Object.hpp
DiligentSamples/Tutorials/XXX_PROJECTS/XXX_GEOMETRY_SHADER/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_PROJECTS/XXX_INSTANCING/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_PROJECTS/XXX_TEXARRAY/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_PROJECTS/XXX_TEXTURES/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_Tesselation/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_TextureArrays/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_TextureArrays/assets/: inst_texarray_pixel_shaderSrc.psh  inst_texarray_vertex_shaderSrc.vsh
DiligentSamples/Tutorials/XXX_TextureArrays/src/: XXX_TextureArrays.cpp  XXX_TextureArrays.hpp
DiligentSamples/Tutorials/XXX_TexturedCube/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_TexturedCube/assets/: cube.psh  cube.vsh
DiligentSamples/Tutorials/XXX_TexturedCube/src/: XXX_TexturedCube.cpp  XXX_TexturedCube.hpp
DiligentSamples/Tutorials/XXX_Textures/: CMakeLists.txt
DiligentSamples/Tutorials/XXX_Textures/assets/: textures_pixel_shader_source.psh  textures_vertex_shader_source.vsh
DiligentSamples/Tutorials/XXX_Textures/src/: XXX_Textures.cpp  XXX_Textures.hpp
DiligentSamples/Tutorials/XXX_Various/: CMakeLists.txt
(+264 files in other folders)
