cmake_minimum_required (VERSION 3.6)


add_subdirectory(INSTANCING_HLSL)
add_subdirectory(INSTANCING02)
add_subdirectory(GEOMETRY_SHADER_HLSL)
add_subdirectory(MeshShader)
add_subdirectory(MeshShaders_Intro)
add_subdirectory(MeshShaders_Simple)
add_subdirectory(MeshShaders_LoadData)
add_subdirectory(MeshShaders_Constants)
add_subdirectory(MeshShaders_SolidTriangles)
add_subdirectory(MeshShaders_Curves)
